# controller

./: .gitignore  README.md
controller-node-tests/: frontend_listener.js  package-lock.json  rust_backend_state_test.js  rust_backend_test.js
controller-react-frontend/: package-lock.json  package.json
controller-react-frontend/public/: index.html
controller-react-frontend/src/: Main.css  Main.tsx  config.json  index.css  index.tsx
controller-react-frontend/src/cultivationPanel/: CultivationPanel.css  CultivationPanel.tsx
controller-react-frontend/src/elements/: Button.tsx  RotationPanel.css  RotationPanel.tsx  Slider.css  Slider.tsx  Switch.css
controller-react-frontend/src/main/: Loading.css  Loading.tsx  Main.css  Main.tsx  Switch.css  Switch.tsx
controller-react-frontend/src/reusableComponents/: NumericalDisplay.css  NumericalDisplay.tsx  NumericalDisplayVsV.css  NumericalDisplayVsV.tsx  Slider.css  Slider.tsx  TextBox.css  TextBox.tsx
controller-react-frontend/src/rotationPanel/: Button.css  NumericalDisplay.css  NumericalDisplay.tsx  RotationPanel.css  RotationPanel.tsx  Slider.tsx
controller-react-frontend/src/tools/: .StateNumber.tsx.swo  .StateNumber.tsx.swp  .Websocket.tsx.kate-swp  CultivationValues.tsx  MotorValues.tsx  StateBool.tsx  (+2 more)
controller-rust/: Cargo.toml  config.json
controller-rust/docs/: speed_calc.ods
controller-rust/src/: .devices.rs.kate-swp  config.json  config.rs  configuration.rs  devices.rs  light.rs  main.rs  motor.rs  pump.rs  ws_server.rs
firmware/motorsControl/: motorsControl.ino
misc/: controller.service
(+1 files in other folders)
