[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"]}
gpiochip = "0.1.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
