[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"]}
gpiochip = "0.1.1"
mongodb = "2.6.1"
rppal = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
